# qt3d_vr_deviceplugins

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  vrplugin.pri
examples/: example_plugin.cpp  main.cpp  main2.cpp  main3.cpp  plugin.cpp  plugin.h  q_plugin.cpp  q_plugin.h  qt_example_plugin.cpp  qt_example_plugin.h
include/VRDeviceImplementation/: IVRDeviceImplementation.h  IVRPluginInfo.h  QTestImplementation.h  VRPluginInfo.h  VRPluginInfo.h.orig  VRPluginTypes.h  plugin.h  plugin.h~
include/plugin/: IPlugin.h  plugin.h
src/: IVRPluginInfo.cpp  VRPluginInfo.cpp  VRPluginInfo.cpp.orig  main.cpp  main2.cpp  main2.cpp.orig  plugin.cpp  plugin.cpp.orig
